# ised

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  lib.rs  main.rs  ui.rs  utils.rs
tests/: config_test.rs  highlight_diff_lines_test.rs  highlight_match_test.rs
