[package]
name = "ised"
description = "An interactive tool for find-and-replace across many files"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.27"
itertools = "0.14.0"
regex = "1.11.1"
tui = "0.19"
walkdir = "2.4"
globset = "0.4"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tempdir = "0.3"
assert_fs = "1"
