[package]
name = "ised"
version = "0.1.0"
edition = "2021"
authors = ["parksb <parkgds@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/parksb/ised"
categories = ["command-line-utilities", "text-processing"]
exclude = ["/target/", "/tests/", "/images/"]
description = """
An interactive tool for find-and-replace across many files
"""

[dependencies]
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.27"
itertools = "0.14.0"
regex = "1.11.1"
tui = "0.19"
walkdir = "2.4"
globset = "0.4"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tempdir = "0.3"
assert_fs = "1"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
